.config/wlogout/style.css
* {
    background-image: none;
    box-shadow: none;
}

window {
    /* Uses GTK's built-in alpha function to apply 70% opacity to the dynamic hex color */
    background-color: alpha(#0b141b, 0.7);
}

button {
    border-radius: 0;
    border-color: #8193a1;
    text-decoration-color: #dae4ed;
    color: #dae4ed;
    background-color: #182127;
    border-style: solid;
    border-width: 1px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 25%;
}

button:active,
button:hover {
    background-color: #50dbcf;
    /* Added on_primary for the text color to ensure contrast when hovering */
    color: #003733;
    outline-style: none;
}

#lock {
    background-image: image(
        url("/usr/share/wlogout/icons/lock.png"),
        url("/usr/local/share/wlogout/icons/lock.png")
    );
}

#logout {
    background-image: image(
        url("/usr/share/wlogout/icons/logout.png"),
        url("/usr/local/share/wlogout/icons/logout.png")
    );
}

#suspend {
    background-image: image(
        url("/usr/share/wlogout/icons/suspend.png"),
        url("/usr/local/share/wlogout/icons/suspend.png")
    );
}

#hibernate {
    background-image: image(
        url("/usr/share/wlogout/icons/hibernate.png"),
        url("/usr/local/share/wlogout/icons/hibernate.png")
    );
}

#shutdown {
    background-image: image(
        url("/usr/share/wlogout/icons/shutdown.png"),
        url("/usr/local/share/wlogout/icons/shutdown.png")
    );
}

#reboot {
    background-image: image(
        url("/usr/share/wlogout/icons/reboot.png"),
        url("/usr/local/share/wlogout/icons/reboot.png")
    );
}

